force-app/main/default/objects/Admission__c/Admission__c.object-meta.xml
<CustomObject>
    <description>Hospital Management System object for Admission.</description>
    <label>Admission</label>
    <nameField>
        <displayFormat>ADM-{00000}</displayFormat>
        <label>Admission Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Admissions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>