force-app/main/default/objects/Admission__c/fields/Actual_Discharge_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Actual_Discharge_Date_Time__c</fullName>
    <label>Actual Discharge Date Time</label>
    <type>DateTime</type>
</CustomField>