force-app/main/default/objects/Admission__c/fields/Admission_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Admission_Date_Time__c</fullName>
    <label>Admission Date Time</label>
    <type>DateTime</type>
</CustomField>