force-app/main/default/objects/Admission__c/fields/Admission_Fee__c.field-meta.xml
<CustomField>
    <fullName>Admission_Fee__c</fullName>
    <businessOwnerUser>raibhoomikakp.d01bc5fcbd1f@agentforce.com</businessOwnerUser>
    <defaultValue>500</defaultValue>
    <label>Admission Fee</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>