force-app/main/default/objects/Admission__c/fields/Admission_Type__c.field-meta.xml
<CustomField>
    <fullName>Admission_Type__c</fullName>
    <label>Admission Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Emergency</fullName>
            </value>
            <value>
                <fullName>Planned</fullName>
            </value>
            <value>
                <fullName>Walk In</fullName>
            </value>
            <value>
                <fullName>Doctor Override</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>