force-app/main/default/objects/Admission__c/fields/Bed__c.field-meta.xml
<CustomField>
    <fullName>Bed__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bed</label>
    <referenceTo>Bed__c</referenceTo>
    <relationshipLabel>Admissions</relationshipLabel>
    <relationshipName>Admissions</relationshipName>
    <type>Lookup</type>
</CustomField>