force-app/main/default/objects/Admission__c/fields/Doctor__c.field-meta.xml
<CustomField>
    <fullName>Doctor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Doctor</label>
    <referenceTo>Doctor__c</referenceTo>
    <relationshipLabel>Admissions</relationshipLabel>
    <relationshipName>Admissions</relationshipName>
    <type>Lookup</type>
</CustomField>