force-app/main/default/objects/Admission__c/fields/Doctor_Assigned_At__c.field-meta.xml
<CustomField>
    <fullName>Doctor_Assigned_At__c</fullName>
    <label>Doctor Assigned At</label>
    <type>DateTime</type>
</CustomField>