force-app/main/default/objects/Admission__c/fields/Doctor_Assignment_Due__c.field-meta.xml
<CustomField>
    <fullName>Doctor_Assignment_Due__c</fullName>
    <label>Doctor Assignment Due</label>
    <type>DateTime</type>
</CustomField>