force-app/main/default/objects/Admission__c/fields/Emergency_Escalated__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Escalated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Emergency Escalated</label>
    <type>Checkbox</type>
</CustomField>