force-app/main/default/objects/Admission__c/fields/Emergency_SLA_Status__c.field-meta.xml
<CustomField>
    <fullName>Emergency_SLA_Status__c</fullName>
    <label>Emergency SLA Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On Time</fullName>
            </value>
            <value>
                <fullName>At Risk</fullName>
            </value>
            <value>
                <fullName>Breached</fullName>
            </value>
            <value>
                <fullName>Escalated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>