force-app/main/default/objects/Admission__c/fields/Expected_Discharge_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Expected_Discharge_Date_Time__c</fullName>
    <label>Expected Discharge Date Time</label>
    <type>DateTime</type>
</CustomField>