force-app/main/default/objects/Admission__c/fields/Insurance_Company__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurance Company</label>
    <referenceTo>Insurance_Company__c</referenceTo>
    <relationshipLabel>Admissions</relationshipLabel>
    <relationshipName>Admissions</relationshipName>
    <type>Lookup</type>
</CustomField>