force-app/main/default/objects/Admission__c/fields/Insurance_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Coverage__c</fullName>
    <label>Insurance Coverage (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>