force-app/main/default/objects/Admission__c/fields/Insurance_Covered_Amount__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Covered_Amount__c</fullName>
    <label>Insurance Covered Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>