force-app/main/default/objects/Admission__c/fields/Intake_Patient_Name__c.field-meta.xml
<CustomField>
    <fullName>Intake_Patient_Name__c</fullName>
    <label>Intake Patient Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>