force-app/main/default/objects/Admission__c/fields/Is_From_Appointment_Type__c.field-meta.xml
<CustomField>
    <fullName>Is_From_Appointment_Type__c</fullName>
    <formula>RecordType.DeveloperName = &quot;From_Appointment&quot;</formula>
    <label>Is From Appointment Type</label>
    <type>Checkbox</type>
</CustomField>