force-app/main/default/objects/Admission__c/fields/Is_New_Admission_Type__c.field-meta.xml
<CustomField>
    <fullName>Is_New_Admission_Type__c</fullName>
    <formula>RecordType.DeveloperName = &quot;New_Admission&quot;</formula>
    <label>Is New Admission Type</label>
    <type>Checkbox</type>
</CustomField>