force-app/main/default/objects/Admission__c/fields/Is_Record_Saved__c.field-meta.xml
<CustomField>
    <fullName>Is_Record_Saved__c</fullName>
    <formula>NOT(ISBLANK(Id))</formula>
    <label>Is Record Saved</label>
    <type>Checkbox</type>
</CustomField>