force-app/main/default/objects/Admission__c/fields/Medicine_Charges__c.field-meta.xml
<CustomField>
    <fullName>Medicine_Charges__c</fullName>
    <label>Medicine Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>