force-app/main/default/objects/Admission__c/fields/Procedure_Charges__c.field-meta.xml
<CustomField>
    <fullName>Procedure_Charges__c</fullName>
    <label>Procedure Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>