force-app/main/default/objects/Admission__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Admitted</fullName>
            </value>
            <value>
                <fullName>Pending Discharge</fullName>
            </value>
            <value>
                <fullName>Discharged</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Lab Results Available</fullName>
                <isActive>false</isActive>
                <label>Lab Results Available</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>