force-app/main/default/objects/Admission__c/fields/Stay_Cost__c.field-meta.xml
<CustomField>
    <fullName>Stay_Cost__c</fullName>
    <label>Stay Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>