force-app/main/default/objects/Admission__c/recordTypes/From_Appointment.recordType-meta.xml
<RecordType>
    <fullName>From_Appointment</fullName>
    <active>true</active>
    <label>From Appointment</label>
</RecordType>