force-app/main/default/objects/Admission__c/recordTypes/New_Admission.recordType-meta.xml
<RecordType>
    <fullName>New_Admission</fullName>
    <active>true</active>
    <label>New Admission</label>
</RecordType>