force-app/main/default/objects/Admission__c/validationRules/Admission_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Admission_Date_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Admission_Date_Time__c &lt; (NOW() - 1)</errorConditionFormula>
    <errorDisplayField>Admission_Date_Time__c</errorDisplayField>
    <errorMessage>Admission can&apos;t be in the past.</errorMessage>
</ValidationRule>