force-app/main/default/objects/Admission__c/validationRules/Admission_Fee.validationRule-meta.xml
<ValidationRule>
    <fullName>Admission_Fee</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( Admission_Fee__c )</errorConditionFormula>
    <errorDisplayField>Admission_Fee__c</errorDisplayField>
    <errorMessage>Admission Fee is fixed.</errorMessage>
</ValidationRule>