force-app/main/default/objects/Admission__c/validationRules/Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Actual_Discharge_Date_Time__c &lt; Admission_Date_Time__c</errorConditionFormula>
    <errorDisplayField>Discharge_Date__c</errorDisplayField>
    <errorMessage>Discharge Date can&apos;t be in the past</errorMessage>
</ValidationRule>