force-app/main/default/objects/Admission__c/validationRules/Expected_Discharge_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Expected_Discharge_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Expected_Discharge_Date_Time__c &lt; Admission_Date_Time__c</errorConditionFormula>
    <errorDisplayField>Expected_Discharge_Date_Time__c</errorDisplayField>
    <errorMessage>Expected Discharge date can&apos;t be in the past.</errorMessage>
</ValidationRule>